--- a/package.json
+++ b/package.json
@@ -8,11 +8,35 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "animate.css": "^4.1.1",
+    "animate.css-react": "^1.1.0",
+    "animejs": "^3.2.1",
+    "aos": "^2.3.4",
+    "compass": "^0.1.1",
+    "css-loader": "^5.0.1",
     "fontfaceobserver": "^2.1.0",
+    "gsap": "^3.6.0",
     "next": "10.0.6",
+    "next-compose-plugins": "^2.2.1",
+    "next-images": "^1.7.0",
     "next-svgr": "0.0.2",
+    "next-transpile-modules": "^6.3.0",
     "react": "17.0.1",
+    "react-animated-css": "^1.2.1",
+    "react-collapse": "^5.1.0",
+    "react-collapsible": "^2.8.3",
     "react-dom": "17.0.1",
-    "sass": "^1.32.6"
+    "react-particles-js": "^3.4.1",
+    "react-slick": "^0.28.0",
+    "sass": "^1.32.6",
+    "simplex-noise": "^2.4.0",
+    "slick-carousel": "^1.8.1",
+    "three": "^0.125.2",
+    "webpack": "^5.21.2"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
